package NYT.NTimestampServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqCommitTimestamp
{
    required int64 timestamp = 1;
}

////////////////////////////////////////////////////////////////////////////////

